--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,23 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "ons-system"
 version = "0.1.0"
-description = "System for ganarating planning tables automatically"
+description = "Sistema para gerar tabelas de planejamento automaticamente"
 authors = [
-  { name="Joao Victor Gazitua", email="jvgazituadev@gmail.com" }
+  { name = "Joao Victor Gazitua", email = "jvgazituadev@gmail.com" }
 ]
+readme = "README.md"
+requires-python = ">=3.7"
+dependencies = [
+  "tkcalendar",
+  "pandas"
+]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
