--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,5 +37,9 @@ jobs:
       - name: Install dependencies
         run: python -m pip install pytest .
 
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=src" >> $GITHUB_ENV
+
+
       - name: Run tests
         run: pytest
