--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,11 +35,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: python -m pip install pytest .
-
-      - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=src" >> $GITHUB_ENV
-
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
+          pip install pytest
 
       - name: Run tests
-        run: pytest
+        run: PYTHONPATH=src pytest
