--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,5 +40,9 @@ jobs:
           pip install .
           pip install pytest
 
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
+
+
       - name: Run tests
-        run: PYTHONPATH=src pytest
+        run: pytest
