--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,11 +37,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install .
           pip install pytest
-
-
-      - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=${{ github.workspace }}/src" >> $GITHUB_ENV
-
+          
 
       - name: Run tests
-        run: pytest
+        run: PYTHONPATH=src pytest
