--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,4 +40,4 @@ jobs:
           
 
       - name: Run tests
-        run: PYTHONPATH=src pytest
+        run: PYTHONPATH=${{ github.workspace }}/src pytest
